<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ENVIRONMENTAL PARAMETERS, ENGINE LIMITS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- OAT, PA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_grey"
                android:orientation="vertical">
                <!-- OAT -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textSize="@dimen/label_size"
                        android:textStyle="bold"
                        android:text="@string/oat_title"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="@dimen/label_size"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:hint="@string/oat_hint"
                        android:inputType="numberDecimal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:textSize="@dimen/label_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/oat_unit"/>
                </LinearLayout>
                <!-- PRESSURE ALTITUDE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="@dimen/label_size"
                        android:textStyle="bold"
                        android:text="@string/pa_title"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="12dp"
                        android:gravity="end"
                        android:textSize="@dimen/label_size"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:hint="@string/pa_hint"
                        android:inputType="numberDecimal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:textSize="@dimen/label_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/pa_unit"/>
            </LinearLayout>
        </LinearLayout>

            <!-- Tq Target, Limits -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_grey"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_size"
                        android:text="@string/tq_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:hint="@string/tq_hint"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:gravity="end"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/percent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textSize="@dimen/title_size"
                        android:text="@string/n1_limit_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:hint="@string/n1_hint"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:gravity="end"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/percent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:textSize="@dimen/title_size"
                        android:text="@string/t5_limit_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:hint="@string/t5_hint"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:gravity="end"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/oat_unit"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <!-- Eng Params -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Eng #1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_grey"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/eng_label_size"
                    android:textStyle="bold"
                    android:text="@string/eng_1_title"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eng_1_n1_offset"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eng_1_t5_offset"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_size"
                        android:text="@string/n1_indicated_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_size"
                        android:text="@string/t5_indicated_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_size"
                        android:text="@string/n1_adjusted_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_size"
                        android:text="@string/t5_adjusted_title"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Eng #2 -->
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_grey"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/eng_label_size"
                android:textStyle="bold"
                android:text="@string/eng_2_title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_2_n1_offset"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_2_t5_offset"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_size"
                    android:text="@string/n1_indicated_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_size"
                    android:text="@string/t5_indicated_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_size"
                    android:text="@string/n1_adjusted_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_size"
                    android:text="@string/t5_adjusted_title"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center|bottom">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/export_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="@color/dark_grey"
            android:text="@string/clear_all"/>
    </LinearLayout>
</LinearLayout>